--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,22 @@
 pipeline {
     agent any
     environment {
-        DOCKER_CREDENTIALS_ID = 'karybarca' // Cambia esto al ID de tus credenciales Docker en Jenkins
-        DOCKER_IMAGE = 'karyabarca/demoapp' // Cambia esto a tu repositorio Docker
+        DOCKER_CREDENTIALS_ID = 'docker-credentials'
+        DOCKER_IMAGE = 'karyabarca/demoapp'
     }
     stages {
         stage('Build') {
             steps {
                 script {
+                    // Asegúrate de que Docker esté disponible
+                    if (isUnix()) {
+                        sh 'docker --version'
+                    } else {
+                        bat 'docker --version'
+                    }
+                    // Construir la imagen Docker
                     def customImage = docker.build("${DOCKER_IMAGE}:${env.BUILD_ID}")
+                    // Subir la imagen a Docker Hub
                     docker.withRegistry('https://index.docker.io/v1/', "${DOCKER_CREDENTIALS_ID}") {
                         customImage.push()
                     }
@@ -18,8 +26,11 @@ pipeline {
         stage('Deploy') {
             steps {
                 script {
-                    // Aquí puedes agregar comandos para desplegar tu contenedor Docker en tu servidor
-                    sh 'docker run -d -p 8000:8000 --name demoapp ${DOCKER_IMAGE}:${env.BUILD_ID}'
+                    if (isUnix()) {
+                        sh 'docker run -d -p 8000:8000 --name demoapp ${DOCKER_IMAGE}:${env.BUILD_ID}'
+                    } else {
+                        bat 'docker run -d -p 8000:8000 --name demoapp ${DOCKER_IMAGE}:${env.BUILD_ID}'
+                    }
                 }
             }
         }
